Image Processer Framework/errorLogs/[2020-04-29]_23-06-21.txt
Traceback (most recent call last):
  File "./engine.py", line 157, in <module>
    myApp.run()
  File "/home/aditya/kivy_venv/lib/python3.6/site-packages/kivy/app.py", line 828, in run
    self.load_kv(filename=self.kv_file)
  File "/home/aditya/kivy_venv/lib/python3.6/site-packages/kivy/app.py", line 599, in load_kv
    root = Builder.load_file(rfilename)
  File "/home/aditya/kivy_venv/lib/python3.6/site-packages/kivy/lang/builder.py", line 301, in load_file
    return self.load_string(data, **kwargs)
  File "/home/aditya/kivy_venv/lib/python3.6/site-packages/kivy/lang/builder.py", line 368, in load_string
    parser = Parser(content=string, filename=fn)
  File "/home/aditya/kivy_venv/lib/python3.6/site-packages/kivy/lang/parser.py", line 401, in __init__
    self.parse(content)
  File "/home/aditya/kivy_venv/lib/python3.6/site-packages/kivy/lang/parser.py", line 514, in parse
    rule.precompile()
  File "/home/aditya/kivy_venv/lib/python3.6/site-packages/kivy/lang/parser.py", line 261, in precompile
    x.precompile()
  File "/home/aditya/kivy_venv/lib/python3.6/site-packages/kivy/lang/parser.py", line 257, in precompile
    x.precompile()
  File "/home/aditya/kivy_venv/lib/python3.6/site-packages/kivy/lang/parser.py", line 184, in precompile
    self.co_value = compile(value, self.ctx.filename or '<string>', mode)
  File "/home/aditya/Documents/Unr Stuff/CS 425 - Senior Project/Graphical User Interface/LookingMass/Image Processer Framework/my.kv", line 116
    Testing 1 2 3
            ^
SyntaxError: invalid syntax
